--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,15 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+
+#Switzerland {
+    background-color: #03a916;
+}
+
+#Australia {
+    background-color: #0306a9;
+}
+
+#Brazil {
+    background-color: #f5e618;
+}
